packages/libbird/cpp/engine.h

typedef _Bool bool;
typedef void (*FrameCallback)(void *);
typedef void (*ResizeCallback)();
typedef struct {
  int fd;
  int width;
  int height;
  int pitch;
  uint32_t drm_format;
  uint64_t modifier;
  bool premultiplied;
  uint64_t generation;
} LadybirdLinuxDmaBufFrame;
LADYBIRD_API void init_ladybird();
LADYBIRD_API int create_web_view();
LADYBIRD_API void destroy_web_view(int view_id);
LADYBIRD_API void *get_latest_pixel_buffer(int view_id);
LADYBIRD_API bool copy_latest_pixel_buffer(int view_id, uint8_t *out_buffer,
                                           int out_capacity, int *out_width,
                                           int *out_height);
LADYBIRD_API uint64_t get_frame_generation(int view_id);
LADYBIRD_API bool acquire_latest_frame(int view_id, const uint8_t **out_pixels,
                                       int *out_width, int *out_height,
                                       int *out_pitch, uint64_t *out_generation,
                                       void **out_frame_handle);
LADYBIRD_API void release_latest_frame(void *frame_handle);
LADYBIRD_API bool
acquire_latest_linux_dmabuf_frame(int view_id,
                                  LadybirdLinuxDmaBufFrame *out_frame);
LADYBIRD_API void set_frame_callback(int view_id, FrameCallback callback,
                                     void *context);
LADYBIRD_API void set_resize_callback(int view_id, ResizeCallback callback);
LADYBIRD_API void resize_window(int view_id, int width, int height);
LADYBIRD_API void navigate_to(int view_id, const char *url);
LADYBIRD_API void set_zoom(int view_id, double zoom);
LADYBIRD_API int get_iosurface_width(int view_id);
LADYBIRD_API int get_iosurface_height(int view_id);
typedef void (*UrlChangeCallback)(const char *);
typedef void (*TitleChangeCallback)(const char *);
typedef void (*FaviconChangeCallback)(const uint8_t *, int, int);
typedef void (*CrossSiteNavigationCallback)(int view_id);
typedef void (*LoadingStateChangeCallback)(bool is_loading);
LADYBIRD_API void set_url_change_callback(int view_id,
                                          UrlChangeCallback callback);
LADYBIRD_API void set_title_change_callback(int view_id,
                                            TitleChangeCallback callback);
LADYBIRD_API void set_favicon_change_callback(int view_id,
                                              FaviconChangeCallback callback);
LADYBIRD_API void
set_cross_site_navigation_callback(int view_id,
                                   CrossSiteNavigationCallback callback);
LADYBIRD_API void
set_loading_state_change_callback(int view_id,
                                  LoadingStateChangeCallback callback);
LADYBIRD_API bool is_tab_loading(int view_id);
LADYBIRD_API void tick_ladybird();
LADYBIRD_API void reload_tab(int view_id);
LADYBIRD_API void go_back(int view_id);
LADYBIRD_API void go_forward(int view_id);
LADYBIRD_API bool can_go_back(int view_id);