packages/libbird/lib/src/generated/engine_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings to ladybird C++ engine
class LadybirdBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LadybirdBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LadybirdBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void init_ladybird() {
    return _init_ladybird();
  }

  late final _init_ladybirdPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('init_ladybird');
  late final _init_ladybird = _init_ladybirdPtr.asFunction<void Function()>();

  int create_web_view() {
    return _create_web_view();
  }

  late final _create_web_viewPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('create_web_view');
  late final _create_web_view = _create_web_viewPtr
      .asFunction<int Function()>();

  void destroy_web_view(int view_id) {
    return _destroy_web_view(view_id);
  }

  late final _destroy_web_viewPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'destroy_web_view',
      );
  late final _destroy_web_view = _destroy_web_viewPtr
      .asFunction<void Function(int)>();

  ffi.Pointer<ffi.Void> get_latest_pixel_buffer(int view_id) {
    return _get_latest_pixel_buffer(view_id);
  }

  late final _get_latest_pixel_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Int)>>(
        'get_latest_pixel_buffer',
      );
  late final _get_latest_pixel_buffer = _get_latest_pixel_bufferPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  bool copy_latest_pixel_buffer(
    int view_id,
    ffi.Pointer<ffi.Uint8> out_buffer,
    int out_capacity,
    ffi.Pointer<ffi.Int> out_width,
    ffi.Pointer<ffi.Int> out_height,
  ) {
    return _copy_latest_pixel_buffer(
      view_id,
      out_buffer,
      out_capacity,
      out_width,
      out_height,
    );
  }

  late final _copy_latest_pixel_bufferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('copy_latest_pixel_buffer');
  late final _copy_latest_pixel_buffer = _copy_latest_pixel_bufferPtr
      .asFunction<
        bool Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
        )
      >();

  int get_frame_generation(int view_id) {
    return _get_frame_generation(view_id);
  }

  late final _get_frame_generationPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Int)>>(
        'get_frame_generation',
      );
  late final _get_frame_generation = _get_frame_generationPtr
      .asFunction<int Function(int)>();

  bool acquire_latest_frame(
    int view_id,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_pixels,
    ffi.Pointer<ffi.Int> out_width,
    ffi.Pointer<ffi.Int> out_height,
    ffi.Pointer<ffi.Int> out_pitch,
    ffi.Pointer<ffi.Uint64> out_generation,
    ffi.Pointer<ffi.Pointer<ffi.Void>> out_frame_handle,
  ) {
    return _acquire_latest_frame(
      view_id,
      out_pixels,
      out_width,
      out_height,
      out_pitch,
      out_generation,
      out_frame_handle,
    );
  }

  late final _acquire_latest_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Uint64>,
            ffi.Pointer<ffi.Pointer<ffi.Void>>,
          )
        >
      >('acquire_latest_frame');
  late final _acquire_latest_frame = _acquire_latest_framePtr
      .asFunction<
        bool Function(
          int,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Uint64>,
          ffi.Pointer<ffi.Pointer<ffi.Void>>,
        )
      >();

  void release_latest_frame(ffi.Pointer<ffi.Void> frame_handle) {
    return _release_latest_frame(frame_handle);
  }

  late final _release_latest_framePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'release_latest_frame',
      );
  late final _release_latest_frame = _release_latest_framePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  bool acquire_latest_linux_dmabuf_frame(
    int view_id,
    ffi.Pointer<LadybirdLinuxDmaBufFrame> out_frame,
  ) {
    return _acquire_latest_linux_dmabuf_frame(view_id, out_frame);
  }

  late final _acquire_latest_linux_dmabuf_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Int, ffi.Pointer<LadybirdLinuxDmaBufFrame>)
        >
      >('acquire_latest_linux_dmabuf_frame');
  late final _acquire_latest_linux_dmabuf_frame =
      _acquire_latest_linux_dmabuf_framePtr
          .asFunction<
            bool Function(int, ffi.Pointer<LadybirdLinuxDmaBufFrame>)
          >();

  void set_frame_callback(
    int view_id,
    FrameCallback callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _set_frame_callback(view_id, callback, context);
  }

  late final _set_frame_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, FrameCallback, ffi.Pointer<ffi.Void>)
        >
      >('set_frame_callback');
  late final _set_frame_callback = _set_frame_callbackPtr
      .asFunction<void Function(int, FrameCallback, ffi.Pointer<ffi.Void>)>();

  void set_resize_callback(int view_id, ResizeCallback callback) {
    return _set_resize_callback(view_id, callback);
  }

  late final _set_resize_callbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ResizeCallback)>>(
        'set_resize_callback',
      );
  late final _set_resize_callback = _set_resize_callbackPtr
      .asFunction<void Function(int, ResizeCallback)>();

  void resize_window(int view_id, int width, int height) {
    return _resize_window(view_id, width, height);
  }

  late final _resize_windowPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.Int)>>(
        'resize_window',
      );
  late final _resize_window = _resize_windowPtr
      .asFunction<void Function(int, int, int)>();

  void navigate_to(int view_id, ffi.Pointer<ffi.Char> url) {
    return _navigate_to(view_id, url);
  }

  late final _navigate_toPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Char>)>
      >('navigate_to');
  late final _navigate_to = _navigate_toPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Char>)>();

  void set_zoom(int view_id, double zoom) {
    return _set_zoom(view_id, zoom);
  }

  late final _set_zoomPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Double)>>(
        'set_zoom',
      );
  late final _set_zoom = _set_zoomPtr.asFunction<void Function(int, double)>();

  int get_iosurface_width(int view_id) {
    return _get_iosurface_width(view_id);
  }

  late final _get_iosurface_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'get_iosurface_width',
      );
  late final _get_iosurface_width = _get_iosurface_widthPtr
      .asFunction<int Function(int)>();

  int get_iosurface_height(int view_id) {
    return _get_iosurface_height(view_id);
  }

  late final _get_iosurface_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'get_iosurface_height',
      );
  late final _get_iosurface_height = _get_iosurface_heightPtr
      .asFunction<int Function(int)>();

  void set_url_change_callback(int view_id, UrlChangeCallback callback) {
    return _set_url_change_callback(view_id, callback);
  }

  late final _set_url_change_callbackPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, UrlChangeCallback)>
      >('set_url_change_callback');
  late final _set_url_change_callback = _set_url_change_callbackPtr
      .asFunction<void Function(int, UrlChangeCallback)>();

  void set_title_change_callback(int view_id, TitleChangeCallback callback) {
    return _set_title_change_callback(view_id, callback);
  }

  late final _set_title_change_callbackPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, TitleChangeCallback)>
      >('set_title_change_callback');
  late final _set_title_change_callback = _set_title_change_callbackPtr
      .asFunction<void Function(int, TitleChangeCallback)>();

  void set_favicon_change_callback(
    int view_id,
    FaviconChangeCallback callback,
  ) {
    return _set_favicon_change_callback(view_id, callback);
  }

  late final _set_favicon_change_callbackPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, FaviconChangeCallback)>
      >('set_favicon_change_callback');
  late final _set_favicon_change_callback = _set_favicon_change_callbackPtr
      .asFunction<void Function(int, FaviconChangeCallback)>();

  void set_cross_site_navigation_callback(
    int view_id,
    CrossSiteNavigationCallback callback,
  ) {
    return _set_cross_site_navigation_callback(view_id, callback);
  }

  late final _set_cross_site_navigation_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, CrossSiteNavigationCallback)
        >
      >('set_cross_site_navigation_callback');
  late final _set_cross_site_navigation_callback =
      _set_cross_site_navigation_callbackPtr
          .asFunction<void Function(int, CrossSiteNavigationCallback)>();

  void set_loading_state_change_callback(
    int view_id,
    LoadingStateChangeCallback callback,
  ) {
    return _set_loading_state_change_callback(view_id, callback);
  }

  late final _set_loading_state_change_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, LoadingStateChangeCallback)
        >
      >('set_loading_state_change_callback');
  late final _set_loading_state_change_callback =
      _set_loading_state_change_callbackPtr
          .asFunction<void Function(int, LoadingStateChangeCallback)>();

  bool is_tab_loading(int view_id) {
    return _is_tab_loading(view_id);
  }

  late final _is_tab_loadingPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int)>>('is_tab_loading');
  late final _is_tab_loading = _is_tab_loadingPtr
      .asFunction<bool Function(int)>();

  void tick_ladybird() {
    return _tick_ladybird();
  }

  late final _tick_ladybirdPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('tick_ladybird');
  late final _tick_ladybird = _tick_ladybirdPtr.asFunction<void Function()>();

  void reload_tab(int view_id) {
    return _reload_tab(view_id);
  }

  late final _reload_tabPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('reload_tab');
  late final _reload_tab = _reload_tabPtr.asFunction<void Function(int)>();

  void go_back(int view_id) {
    return _go_back(view_id);
  }

  late final _go_backPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('go_back');
  late final _go_back = _go_backPtr.asFunction<void Function(int)>();

  void go_forward(int view_id) {
    return _go_forward(view_id);
  }

  late final _go_forwardPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('go_forward');
  late final _go_forward = _go_forwardPtr.asFunction<void Function(int)>();

  bool can_go_back(int view_id) {
    return _can_go_back(view_id);
  }
